# power-project

./: README.md  pyproject.toml
power_project/: hooks.py
power_project/power_project/doctype/attendees_user/: attendees_user.js  attendees_user.json  attendees_user.py  test_attendees_user.py
power_project/power_project/doctype/meeting/: meeting.js  meeting.json  meeting.py  meeting_calendar.js  test_meeting.py
